--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="resh">Решение задач</string>
     <string name="theor3">Теория</string>
     <string name="per">Перевод в различные системы счисления</string>
+    <string name="text1">Введите число</string>
+    <string name="_2">2</string>
+    <string name="text2">Введите нужную степень</string>
+    <string name="infostep">Степень возведения</string>
+    <string name="infostep0">Возведение числа в нужную степень</string>
+    <string name="button1">Результат</string>
+    <string name="button2">Результат</string>
+    <string name="infostep1">Извлечь корень из числа</string>
+    <string name="infostep3">Результат:</string>
+    <string name="koren">Корень:</string>
+    <string name="step">Возведение в степень:</string>
 </resources>
