--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">TechnicalAssistant</string>
     <string name="math">Математика</string>
-    <string name="phys">Физика</string>
     <string name="info">Информатика</string>
-    <string name="theor">Алгебра</string>
-    <string name="theor2">Геометрия</string>
+    <string name="theor">Логарифмы</string>
+    <string name="theor2">В разработке</string>
     <string name="sqrt">Корень и степень числа</string>
     <string name="uravnenie">Решение уравнений</string>
     <string name="resh">Решение задач</string>
@@ -39,4 +38,7 @@
     <string name="infonumb1">Введите первое число</string>
     <string name="infonumbsys2">Введите второе число</string>
     <string name="deyinf">Действие:</string>
+    <string name="infolog">Нахождение логарифма</string>
+    <string name="inp">Введите нужное основание</string>
+    <string name="Log">Логарифм:</string>
 </resources>
