--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="info">Информатика</string>
     <string name="test">Тесты (в разработке)</string>
     <string name="theor">Логарифмы</string>
-    <string name="theor2">Графики функции (в разработке)</string>
+    <string name="theor2">Графики функции</string>
     <string name="sqrt">Корень и степень числа</string>
     <string name="uravnenie">Решение квадратного уравнения</string>
     <string name="resh">Решение задач</string>
