--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TechnicalAssistant</string>
     <string name="math">Математика</string>
+    <string name="phys">Физика</string>
     <string name="info">Информатика</string>
     <string name="test">Тесты (в разработке)</string>
     <string name="theor">Логарифмы</string>
@@ -42,4 +43,15 @@
     <string name="infolog">Нахождение логарифма</string>
     <string name="inp">Введите нужное основание</string>
     <string name="Log">Логарифм:</string>
+    <string name="mechanica">Механика</string>
+    <string name="molec">Молекулярная физика и основы термодинамики</string>
+    <string name="electrodin">Электродинамика</string>
+    <string name="volnykoleb">Колебания и волны</string>
+    <string name="optic">Оптика</string>
+    <string name="about">About</string>
+    <string name="vid">Выберите вид графика:</string>
+    <string name="razdel">Выберите раздел:</string>
+    <string name="dalee">Далее</string>
+    <string name="dannye">Введите данные:</string>
+    <string name="_0">0</string>
 </resources>
