--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="_1">1</string>
     <string name="_3">3</string>
     <string name="enter">Ввести</string>
+    <string name="time">Время: 60</string>
+    <string name="minus">-</string>
     <string name="popyt">Попытки: 3</string>
     <string name="schet">Счет: 0</string>
     <string name="_0_0">0 + 0 =</string>
